--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation 'com.google.android.gms:play-services:10.0.1+'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
     implementation project(':TheCheeseLibrary')
+    implementation 'com.google.android.gms:play-services:11.4.0'
 }
