--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.Main2Activity"></activity>
+        <activity android:name=".activity.Description"></activity>
     </application>
 
 </manifest>
